--- a/AppResQNow/app/src/main/AndroidManifest.xml
+++ b/AppResQNow/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ResQnow"
         tools:targetApi="31">
         <activity
-            android:name=".Ui_Ux.theme.Navigation.MainActivity"
+            android:name=".Ui_Ux.theme.Router.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ResQnow">
