--- a/AppResQnow/app/src/main/AndroidManifest.xml
+++ b/AppResQnow/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBwPmK0eNnFTtGJnbw5qon0g8tZOJprwtk" />
 
+        <!-- Facebook SDK cấu hình -->
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
+
         <activity
             android:name=".Ui_Ux.theme.Router.MainActivity"
             android:exported="true"
@@ -34,15 +38,10 @@
             </intent-filter>
         </activity>
 
-<<<<<<< HEAD
-=======
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
-
         <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -54,9 +53,6 @@
             </intent-filter>
         </activity>
 
-
-
->>>>>>> 7dd2d1af6625a33cb3715e0ff8e67ff028c5aa7d
     </application>
 
 </manifest>
